--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
           <img src="images/andylogo.jpg" alt="logo" class="u-max-full-width" style="height:80px;">
         </div>
         <div class="two-thirds column menu"><strong>
-          <a class="menu-item" href="#about">About</a>
-          <a class="menu-item" href="#about">Projects</a>
-          <a class="menu-item" href="#about">Languages</a>
-          <a class="menu-item-last" href="#about">Contact</a></strong>
+          <a class="menu-item" href="#about">ABOUT</a>
+          <a class="menu-item" href="#about">PROJECTS</a>
+          <a class="menu-item" href="#about">LANGUAGES</a>
+          <a class="menu-item-last" href="#about">CONTACT</a></strong>
         </div>
       </div>
     </div>
@@ -62,6 +62,8 @@
       </div>
     </div>
   </div>
+
+
 
   <!-- smooth scrolling -->
   <script type="text/javascript">
