Add projects and images

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         </div>
         <div class="two-thirds column menu"><strong>
           <a class="menu-item" href="#about">ABOUT</a>
-          <a class="menu-item" href="#about">PROJECTS</a>
-          <a class="menu-item" href="#about">LANGUAGES</a>
+          <a class="menu-item" href="#technology">TECHNOLOGY</a>
+          <a class="menu-item" href="#projects">PROJECTS</a>
           <a class="menu-item-last" href="#about">CONTACT</a></strong>
         </div>
       </div>
@@ -51,19 +51,143 @@
     </div>
   </div>
 
-
-
-
-  <div class="container">
-    <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
-        <h4>Basic Page</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
+  <!-- about -->
+  <div class="container" id="about">
+    <div class="row spacer">
+      <div class="nine columns">
+        <p>
+          <strong>Determined, dedicated, and always learning!</strong>
+          From robots to websites, I love building, inventing and designing things. A genuine curiosity for how things work combined with a passion for technology = me!
+        </p>
+      </div>
+      <div class="three columns">
+        <img src="images/bitmoji2.png" alt="bitmoji" class="bitmoji">
       </div>
     </div>
   </div>
 
+  <!-- technology -->
+  <div class="container" id="technology">
+    <div class="row spacer">
+      <h1>Technology</h1>
+    </div>
+    <div class="row">
+      <div class="one column">
+        <img src="" alt="">
+      </div>
+    </div>
+  </div>
 
+  <!-- projects -->
+  <div class="container" id="projects">
+    <div class="row spacer">
+      <h1>Projects</h1>
+    </div>
+
+    <div class="row margin-top">
+      <div class="one-third column">
+        <img src="images/chess.png" alt="" class="img">
+        <h4>Knight's Tour</h4>
+        <p>Algorithm which attempts to get a Knight chess piece to touch every square only once. JSPs and Servlets, deployed on AWS Elastic Beanstalk.</p>
+      </div>
+      <div class="one-third column">
+        <img src="images/notebook.png" alt="" class="img">
+        <h4>Sheridan Study</h4>
+        <p>A collaborative study application with discussion boards, flashcards, and various other features.</p>
+      </div>
+      <div class="one-third column">
+        <img src="images/question.png" alt="" class="img">
+        <h4>Sheridan Jeopardy</h4>
+        <p>Sheridan College-themed Jeopardy!</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="one-third column">
+        <a href="https://github.com/aandyle/Knights-Tour" target="_blank" class="button">Code</a>
+        <a href="http://knightstour.andyle.ca/" target="_blank" class="button button-primary">Demo</a>
+      </div>
+      <div class="one-third column">
+        <!-- <a href="https://github.com/aandyle/SheridanStudy" target="_blank" class="button">Code</a> -->
+        <a href="http://sheridanstudy.andyle.ca" target="_blank" class="button button-primary">Demo</a>
+      </div>
+      <div class="one-third column">
+        <a href="https://github.com/aandyle/Sheridan-Jeopardy" target="_blank" class="button">Code</a>
+        <a href="#" target="_blank" class="button button-primary">Demo</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- projects row 2 -->
+  <div class="container">
+    <div class="row margin-top">
+      <div class="one-third column">
+        <img src="images/barcode.png" alt="" class="img">
+        <h4>Price Checker</h4>
+        <p>A personal program that reads barcodes and checks Canada Computers and Amazon.ca for pricing. PHP parsing a UPC database.</p>
+      </div>
+      <div class="one-third column">
+        <img src="images/lock.png" alt="" class="img">
+        <h4>Briefcase</h4>
+        <p>A PHP based guessing game.</p>
+      </div>
+      <div class="one-third column">
+        <img src="images/teamwork.png" alt="" class="img">
+        <h4>MLH Hackathon</h4>
+        <p>MLH Local HackDay! A teamwork of people from semester 1, 2 and 3 build a multiplayer game platform starting with a classic; tic-tac-toe!</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="one-third column">
+        <a href="https://github.com/aandyle/Price-Match" target="_blank" class="button">Code</a>
+        <a href="http://le21.dev.fast.sheridanc.on.ca/Projects/CCPriceCompare/index.php" target="_blank" class="button button-primary">Demo</a>
+      </div>
+      <div class="one-third column">
+        <a href="https://github.com/aandyle/Briefcase-Combo" target="_blank" class="button">Code</a>
+        <a href="http://le21.dev.fast.sheridanc.on.ca/Assignments/a4-andy-le/" target="_blank" class="button button-primary">Demo</a>
+      </div>
+      <div class="one-third column">
+        <a href="https://github.com/Sraavan/MLHHackday" target="_blank" class="button">Code</a>
+        <a href="http://mlhhackday2018.andyle.ca/home.html" target="_blank" class="button button-primary">Demo</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- projects row 3 -->
+  <div class="container">
+    <div class="row margin-top">
+      <div class="one-third column">
+        <img src="images/teamwork.png" alt="" class="img">
+        <h4>ELEVATE Hackathon</h4>
+        <p>Competing against 500 people to develop various smart-city solutions. Planning & design for a safewalk system.</p>
+      </div>
+      <!-- <div class="one-third column">
+        <img src="images/lock.png" alt="" class="img">
+        <h4>Briefcase</h4>
+        <p>A PHP based guuessing game.</p>
+      </div>
+      <div class="one-third column">
+        <img src="images/teamwork.png" alt="" class="img">
+        <h4>MLH Hackathon</h4>
+        <p>MLH Local HackDay! A teamwork of people from semester 1, 2 and 3 build a multiplayer game.</p>
+      </div> -->
+    </div>
+
+    <div class="row">
+      <div class="one-third column">
+        <a href="https://github.com/KeenanDs/WalkT.O-Prototype" target="_blank" class="button">Code</a>
+        <a href="https://invis.io/SCO79BMDYRW" target="_blank" class="button button-primary">Demo</a>
+      </div>
+      <!-- <div class="one-third column">
+        <a href="#" target="_blank" class="button">Code</a>
+        <a href="#" target="_blank" class="button button-primary">Demo</a>
+      </div>
+      <div class="one-third column">
+        <a href="#" target="_blank" class="button">Code</a>
+        <a href="#" target="_blank" class="button button-primary">Demo</a>
+      </div> -->
+    </div>
+  </div>
 
   <!-- smooth scrolling -->
   <script type="text/javascript">
